...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NsP-mV-ioo">
                                <rect key="frame" x="120.33333333333331" y="152.33333333333334" width="60" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="NextCar"/>
                                <state key="normal" title="Next Car"/>
                                <connections>
                                    <action selector="nextCar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7YO-TU-egr"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selected Car Statistics" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uO2-51-Rrn">
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Remaining Funds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zmv-jl-c6a">
                                <rect key="frame" x="172" y="17" width="195" height="66"/>
                                <accessibility key="accessibilityConfiguration" identifier="remainingFunds"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FkQ-sn-uc2">
                                <rect key="frame" x="327" y="192.33333333333334" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="EngineAndExhaustSwitch"/>
                                <connections>
                                    <action selector="engineAndExhaustToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="Pia-pI-Dpp"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="1q3-HQ-lsg">
                                <rect key="frame" x="320" y="233.33333333333334" width="51" height="31.000000000000028"/>
                                <accessibility key="accessibilityConfiguration" identifier="TiresSwitch"/>
                                <connections>
                                    <action selector="tiresPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="XRI-lm-u4i"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tires Package (Cost: 500)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="77V-3x-6vl">
                                <rect key="frame" x="20" y="233.33333333333334" width="200" height="21"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="uuV-ck-nya">
                                <rect key="frame" x="326" y="274.33333333333331" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="TurboBoostSwitch"/>
                                <connections>
                                    <action selector="turboBoostPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="kGB-I4-3UZ"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="oI4-Gw-904">
                                <rect key="frame" x="326" y="315.33333333333331" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="UltraSpeedSwitch"/>
                                <connections>
                                    <action selector="ultraSpeedPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="mYq-Hr-6Hk"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Turbo Boost (Cost: 1000)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg7-Nl-bDx">
                                <rect key="frame" x="20" y="274.33333333333331" width="193" height="21"/>
...
